--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="home_data" data-aos="fade-down">
           <h1 class="home_title">
             Hi, <br />I'm <span class="home_title-color">Krisna </span
-            ><br />Fullstack Developer
+            ><br />Full Stack Developer
           </h1>
           <a href="#contact" class="button">Contact</a>
         </div>
